<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/nanodegree_apps"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_spotify_streamer_app"
            style="@style/AppButton"
            android:onClick="openSpotifyStreamerApp"
            android:text="@string/spotify_streamer_app" />


        <Button
            android:id="@+id/button_scores_app"
            style="@style/AppButton"
            android:onClick="openScoresApp"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/button_library_app"
            style="@style/AppButton"
            android:onClick="openLibraryApp"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/button_build_it_bigger_app"
            style="@style/AppButton"
            android:onClick="openBuildItBiggerApp"
            android:text="@string/build_it_bigger_app" />

        <Button
            android:id="@+id/button_xyz_reader_app"
            style="@style/AppButton"
            android:onClick="openXYZReaderApp"
            android:text="@string/xyz_reader_app" />

        <Button
            android:id="@+id/button_capstone_app"
            style="@style/CapstoneAppButton"
            android:onClick="openCapstoneApp"
            android:text="@string/capstone_project_app" />

    </LinearLayout>

</ScrollView>
